refactor: extract stateless chatbot matcher and fix shared-state race condition